--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.3",
     "axios": "^0.24.0",
+    "framer-motion": "^6.2.6",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "5.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
