--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "5.2.1",
     "react-scripts": "5.0.0",
+    "react-timer-hook": "^3.0.5",
     "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
